# auto-garage-management

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
database/: TABLE+trigger.sql  data.sql  init.sql  sp_revenue_report.sql  sp_stock_report.sql
packaging/: README.md  auto_garage.spec  installer.iss
src/: launcher.py  main.py
src/app/: __init__.py  config.py  database.py  portable_mysql.py  session.py
src/presentation/: __init__.py  permissions.py
src/presentation/controllers/: __init__.py  login_controller.py  main_controller.py
src/presentation/views/: __init__.py  login_dialog.py  main_window.py
src/presentation/views/pages/: __init__.py  bao_cao_doanh_so_page.py  bao_cao_ton_page.py  nhap_vat_tu_page.py  phieu_sua_chua_page.py  phieu_thu_page.py  quan_ly_danh_muc_page.py  quan_ly_user_page.py  thay_doi_quy_dinh_page.py  tiep_nhan_xe_page.py  tra_cuu_xe_page.py
src/services/: __init__.py  car_reception_service.py  receipt_service.py  repair_service.py  revenue_report_service.py  stock_report_service.py  supplies_import_service.py  system_settings_service.py  vehicle_lookup_service.py
src/utils/: __init__.py  messages.py  print_dialog.py  style.py
